--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,10 +33,8 @@ spec:
               value: {{ .Values.env.rootPassword }}
             - name: MYSQL_DATABASE
               value: {{ .Values.env.databaseName }}
-          # command:
-          #   - mysqld
-          # args:
-          #   - --default-authentication-plugin=mysql_native_password
+          args:
+            - --default-authentication-plugin=mysql_native_password
           volumeMounts:
             - name: data
               mountPath: /var/lib/mysql
